Version 2.02.96 - 
================================
  Update and fix monitoring of thin pool devices.
  Check hash insert success in lock_vg clvmd.
  Check for buffer overwrite in get_cluster_type() clvmd.
  Fix global/detect_internal_vg_cache_corruption config check.
  Update lcov Makefile target to support all dmeventd plugins.
  Fix initializiation of thin monitoring (2.02.92).
  Support improperly formated device numbers in /proc/devices (2.02.91).
  Fix fsadm propagation of -e option.
  Fix fsadm parsing of /proc/mounts files (don't check for substrings).
  Fix fsadm usage of arguments with space.
  Fix a regression in handling of lvchange/lvcreate --major/--minor.
  Fix name conflicts that prevent down-converting RAID1 when specifying a device
  Improve thin_check option passing and use configured path.
  Add --with-thin-check configure option for path to thin_check.
  Detect lvm binary path in lvmetad udev rules.
  Fix error message when pvmove LV activation fails with name already in use.
  Better structure layout for device_info in dev_subsystem_name().
  Change message severity for creation of VG over uninitialised devices.
  Fix error path for failing toolcontext creation.
  Fix warn msg for thin pool chunk size and update man for chunksize (2.02.89).

Version 2.02.95 - 6th March 2012
================================
  If unspecified, adjust thin pool metadata and chunk size to fit into 128MB.
  Print just warning on thin pool check callback path for failing check.
  Always use 64bit arithmetic with VG extent_size expression.
  Validate udev structures in _insert_udev_dir().
  Take repeatable --major --minor with pvscan --cache instead of major:minor.
  Scan all devices for lvmetad if 'pvscan --cache' used without device list.
  Populate lvmcache from lvmetad before displaying PVs in pvscan. (2.02.94)
  Suppress incorrect -n pvscan warning now always displayed. (2.02.94)

Version 2.02.94 - 3rd March 2012
================================